--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,9 @@ jobs:
         with:
           go-version: '1.24'
 
+      - name: Generate BPF artifacts
+        run: go generate
+
       - name: Build AMD64
         run: CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o fim-ebpf-linux-amd64 .
 
