--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,8 @@ permissions:
 jobs:
   release:
     runs-on: ubuntu-latest
+    container:
+      image: cilium/ebpf-builder:1738682766
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
