--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     container:
-      image: cilium/ebpf-builder:1738682766
+      image: quay.io/cilium/ebpf-builder:1648566014
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -38,6 +38,7 @@ jobs:
         run: CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o fim-ebpf-linux-arm64 .
 
       - name: Create Release
+        if: github.event_name == 'push'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VERSION: ${{ steps.get_version.outputs.VERSION }}
