Support monitoring directories

--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,7 @@ monitored_files:
   - /tmp/testfile
   - /etc/passwd
   - /etc/shadow
+  - /tmp # supports monitoring directories
 
 ignore_actions:
   - read
